# gb-rp2350

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  memory.x  pin_mapping.env
.cargo/: config.toml
src/: array_scaler.rs  clocks.rs  const_math.rs  dma_transfer.rs  hack.rs  i2s.rs  i2s2.rs  main.rs  pio_dma_interface.rs  pio_interface.rs  rp_hal.rs  scaler.rs  stream_display.rs  util.rs
src/gameboy/: audio.rs  display.rs  mod.rs  rom.rs  static_rom.rs
src/hardware/: flash.rs  mod.rs  psram.rs  sdcard.rs  sound.rs
src/hardware/display/: dma_streamer.rs  dma_transfer.rs  ili9488.rs  mod.rs  parallel_8bit_interface.rs  scaler.rs  spi_pio_interface.rs
src/spi_device/: exclusive.rs  mod.rs  shared.rs
src/ui/: loading.rs  mod.rs  rom_select.rs
