[package]
authors = ["The rp-rs Developers"]
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]
description = "Gameboy emulator for the rp2350"
edition = "2021"
homepage = "https://github.com/rp-rs/rp-hal"
keywords = [
    "embedded",
    "hal",
    "raspberry-pi",
    "rp235x",
    "rp2350",
    "embedded-hal",
]
license = "MIT OR Apache-2.0"
name = "gb-rp2350"
repository = "https://github.com/rp-rs/rp-hal"
rust-version = "1.77"
version = "0.1.0"

[dependencies]
byte-slice-cast = { version = "1.2.2", default-features = false }
display-interface = "0.5"
embedded-graphics-core = "0.4.0"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
mipidsi = "0.8.0"
gb-core = { git = "https://github.com/Altaflux/rust-gb.git", rev = "282ea98bde0d0876987511ab52da8bbeb5f8cc67", default-features = false }
#gb-core = { path = "C:\\Users\\pablo\\projects\\rust-gb\\gb-core", default-features = false }
embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
embedded-io = "0.6.1"
# We aren't using this, but embedded-hal-bus 0.2 unconditionally requires atomics.
# Should be fixed in e-h-b 0.3 via https://github.com/rust-embedded/embedded-hal/pull/607
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
cortex-m = { version = "0.7.2" }
cortex-m-rt = "0.7.5"
critical-section = { version = "1.2.0" }
defmt = "0.3"

embedded-sdmmc = { version = "0.8.1", features = [
    # "defmt-log",
], default-features = false }
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-dma = "0.2.0"

const-lru = "1.0.0"
fugit = "0.3.6"

pio = "0.2.0"
pio-proc = "0.2.0"
# rp235x-hal = { git = "https://github.com/rp-rs/rp-hal.git", rev = "63af8640a666ad329a0ddb1b8501a75d2ff61e3b", features = [
#     "binary-info",
#     "critical-section-impl",
#     "rt",
#     "defmt",
# ] }
rp235x-hal = { path = "C:\\Users\\pablo\\projects\\rp-hal\\rp235x-hal", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
    "defmt",
] }
defmt-serial = "0.10.0"
static_cell = "2.1.0"
panic-probe = { version = "0.3.2", features = ["defmt", "print-defmt"] }
const_env = "0.1.2"

[build-dependencies]
dotenv = "0.15.0"
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.release.build-override]
codegen-units = 1
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = false


[features]
sdcard_rom = []
flash_rom = []
boot_sdcard_rom = []
boot_flash_rom = []
boot_none_rom = []
